Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16544

signal 11 while importing sphinx table

    XMLWordPrintable

Details

    Description

      Hello, I encounter error 11 while importing some 15gb sql dump. Error log says:

      Version: '10.3.7-MariaDB-1:10.3.7+maria~stretch'  socket: '/var/run/mysqld/mysqld.sock'  port: 3306  mariadb.org binary distributi
      on
      180621 11:50:59 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.3.7-MariaDB-1:10.3.7+maria~stretch
      key_buffer_size=16777216
      read_buffer_size=131072
      max_used_connections=1
      max_threads=153
      thread_count=7
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 352701 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f89300009a8
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f89640fdcf8 thread_stack 0x30000
      /usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x5647676adc5e]
      /usr/sbin/mysqld(handle_fatal_signal+0x41f)[0x56476715eabf]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x110c0)[0x7f896a6570c0]
      /usr/lib/mysql/plugin/ha_sphinx.so(_ZN9ha_sphinx6createEPKcP5TABLEP14HA_CREATE_INFO+0x167)[0x7f8964657167]
      /usr/sbin/mysqld(_ZN7handler9ha_createEPKcP5TABLEP14HA_CREATE_INFO+0x38)[0x564767166cb8]
      /usr/sbin/mysqld(_Z15ha_create_tableP3THDPKcS2_S2_P14HA_CREATE_INFOP34st_mysql_const_unsigned_lex_string+0x1e1)[0x564767167511]
      /usr/sbin/mysqld(_Z16rea_create_tableP3THDP34st_mysql_const_unsigned_lex_stringPKcS4_S4_P14HA_CREATE_INFOP7handlerb+0x9c)[0x564767
      04366c]
      /usr/sbin/mysqld(+0x5fe490)[0x56476700f490]
      /usr/sbin/mysqld(_Z26mysql_create_table_no_lockP3THDPK25st_mysql_const_lex_stringS3_P22Table_specification_stP10Alter_infoPbiP10TA
      BLE_LIST+0xfb)[0x56476700fa4b]
      /usr/sbin/mysqld(_Z18mysql_create_tableP3THDP10TABLE_LISTP22Table_specification_stP10Alter_info+0xeb)[0x56476700fc0b]
      /usr/sbin/mysqld(_Z21mysql_execute_commandP3THD+0x84f9)[0x564766f8e769]
      /usr/sbin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x21a)[0x564766f8ee5a]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x1c81)[0x564766f917f1]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x131)[0x564766f924a1]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x25a)[0x56476705f81a]
      /usr/sbin/mysqld(handle_one_connection+0x3d)[0x56476705f99d]
      nptl/pthread_create.c:333(start_thread)[0x7f896a64d494]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x3f)[0x7f8968ba7acf]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f8930011610): CREATE TABLE `AttachmentsIndex` (   `id` bigint(20) NOT NULL,   `weight` int(11) NOT NULL,   `query` varch
      ar(3072) NOT NULL,   KEY `query` (`query`(1024)) ) ENGINE=SPHINX DEFAULT CHARSET=utf8 CONNECTION='sphinx://127.0.0.1:3312/rt'
      Connection ID (thread ID): 9
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on
       
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      2018-06-21 11:51:05 0 [Note] Using unique option prefix 'myisam-recover' is error-prone and can break in the future. Please use the full name 'myisam-recover-options' instead.
      2018-06-21 11:51:05 0 [Warning] Plugin 'SPHINX' is of maturity level gamma while the server is stable
      2018-06-21 11:51:05 0 [Note] InnoDB: Using Linux native AIO
      2018-06-21 11:51:05 0 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
      2018-06-21 11:51:05 0 [Note] InnoDB: Uses event mutexes
      2018-06-21 11:51:05 0 [Note] InnoDB: Compressed tables use zlib 1.2.8
      2018-06-21 11:51:05 0 [Note] InnoDB: Number of pools: 1
      2018-06-21 11:51:05 0 [Note] InnoDB: Using SSE2 crc32 instructions
      2018-06-21 11:51:05 0 [Note] InnoDB: Initializing buffer pool, total size = 128M, instances = 1, chunk size = 128M
      2018-06-21 11:51:05 0 [Note] InnoDB: Completed initialization of buffer pool
      2018-06-21 11:51:05 0 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
      2018-06-21 11:51:05 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=103958220381
      2018-06-21 11:51:06 0 [Note] InnoDB: Recovered page [page id: space=109, page number=658791] from the doublewrite buffer.
      .....
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f8930011610): CREATE TABLE `AttachmentsIndex` (   `id` bigint(20) NOT NULL,   `weight` int(11) NOT NULL,   `query` varch
      ar(3072) NOT NULL,   KEY `query` (`query`(1024)) ) ENGINE=SPHINX DEFAULT CHARSET=utf8 CONNECTION='sphinx://127.0.0.1:3312/rt'
      Connection ID (thread ID): 9
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on
       
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      2018-06-21 11:51:05 0 [Note] Using unique option prefix 'myisam-recover' is error-prone and can break in the future. Please use the full name 'myisam-recover-options' instead.
      2018-06-21 11:51:05 0 [Warning] Plugin 'SPHINX' is of maturity level gamma while the server is stable
      2018-06-21 11:51:05 0 [Note] InnoDB: Using Linux native AIO
      2018-06-21 11:51:05 0 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
      2018-06-21 11:51:05 0 [Note] InnoDB: Uses event mutexes
      2018-06-21 11:51:05 0 [Note] InnoDB: Compressed tables use zlib 1.2.8
      2018-06-21 11:51:05 0 [Note] InnoDB: Number of pools: 1
      2018-06-21 11:51:05 0 [Note] InnoDB: Using SSE2 crc32 instructions
      2018-06-21 11:51:05 0 [Note] InnoDB: Initializing buffer pool, total size = 128M, instances = 1, chunk size = 128M
      2018-06-21 11:51:05 0 [Note] InnoDB: Completed initialization of buffer pool
      2018-06-21 11:51:05 0 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
      2018-06-21 11:51:05 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=103958220381
      2018-06-21 11:51:06 0 [Note] InnoDB: Recovered page [page id: space=109, page number=658791] from the doublewrite buffer.
      

      Should I provide more information or is this OK for some debug?
      Thank you, Petr

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              phanousk Petr Hanousek
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.