MDEV-16544 - crash in ha_sphinx::create()

Use table_arg that was passed to the function, instead of dereferencing
this->table, which is a NULL pointer.